tried new performance image

--- a/lib/articles/article-three.mdx
+++ b/lib/articles/article-three.mdx
@@ -2,7 +2,7 @@
 title: This is the article Three
 description: Nothing to see here
 createdAt: 2021-12-29T19:06:33Z
-thumbnail: https://images.unsplash.com/photo-1640449980811-80c426c6443c
+thumbnail: photo-1640449980811-80c426c6443c
 ---
 
 This is some text about some stuff that happened sometime ago
