--- a/lib/articles/how-i-made-tons-of-pics.mdx
+++ b/lib/articles/how-i-made-tons-of-pics.mdx
@@ -2,7 +2,7 @@
 title: How i made tons of pics
 description: Nothing to see here
 createdAt: 2021-12-29T19:06:33Z
-thumbnail: https://images.unsplash.com/photo-1535747790212-30c585ab4867
+thumbnail: photo-1535747790212-30c585ab4867
 ---
 
 This is some text about some stuff that happened sometime ago
