--- a/lib/articles/manage-firebase-authentication-with-a-single-react-hook.mdx
+++ b/lib/articles/manage-firebase-authentication-with-a-single-react-hook.mdx
@@ -1,7 +1,7 @@
 ---
 title: Manage Firebase authentication, with a single React Hook
 createdAt: 2021-12-29T19:06:33Z
-thumbnail: https://images.unsplash.com/photo-1636454082752-c59bd0b34579
+thumbnail: photo-1636454082752-c59bd0b34579
 ---
 
 Are you doing a React or Next.js application and do you want to implement Google Firebase authentication? This article is totally for you.
