--- a/lib/articles/this-is-what-i-call-good-life.mdx
+++ b/lib/articles/this-is-what-i-call-good-life.mdx
@@ -2,7 +2,7 @@
 title: This is what i call good life
 description: Nothing to see here
 createdAt: 2021-12-29T19:06:33Z
-thumbnail: https://images.unsplash.com/photo-1512375987121-58fe7df71afb
+thumbnail: photo-1512375987121-58fe7df71afb
 ---
 
 This is some text about some stuff that happened sometime ago
