--- a/lib/articles/how-to-manage-millions-of-money.mdx
+++ b/lib/articles/how-to-manage-millions-of-money.mdx
@@ -2,7 +2,7 @@
 title: How to manage millions of money
 description: Nothing to see here
 createdAt: 2021-12-29T19:06:33Z
-thumbnail: https://images.unsplash.com/photo-1640604542825-8d934dc2e5d1
+thumbnail: photo-1640604542825-8d934dc2e5d1
 ---
 
 This is some text about some stuff that happened sometime ago
