refactor: changed article

--- a/lib/articles/publishing-a-javascript-library.mdx
+++ b/lib/articles/publishing-a-javascript-library.mdx
@@ -216,7 +216,7 @@ var arrowFunction = function arrowFunction() {
 
 Did you see the difference? The transpiler will convert the arrow function to a regular function, and it will add the `function` keyword and the `var` keyword.
 
-You can so some experiments with this configuration [here](https://babeljs.io/repl/#?browsers=&build=&builtIns=false&corejs=false&spec=false&loose=false&code_lz=MYewdgzgLgBAhgJwSA7gMQK5mFAluGAXhgAoBKIgPhgG8AoGGUSEAGwFMA6VkAcxIDkAFQAWuCDBS5WrGACN2MKAjiQADtPYATAIQCyAbjoBfIA&debug=false&forceAllTransforms=false&shippedProposals=false&circleciRepo=&evaluate=false&fileSize=false&timeTravel=false&sourceType=script&lineWrap=true&presets=env&prettier=true&targets=&version=7.16.9&externalPlugins=&assumptions=%7B%7D.
+You can so some experiments with this configuration [here](https://babeljs.io/repl/#?browsers=&build=&builtIns=false&corejs=false&spec=false&loose=false&code_lz=MYewdgzgLgBAhgJwSA7gMQK5mFAluGAXhgAoBKIgPhgG8AoGGUSEAGwFMA6VkAcxIDkAFQAWuCDBS5WrGACN2MKAjiQADtPYATAIQCyAbjoBfIA&debug=false&forceAllTransforms=false&shippedProposals=false&circleciRepo=&evaluate=false&fileSize=false&timeTravel=false&sourceType=script&lineWrap=true&presets=env&prettier=true&targets=&version=7.16.9&externalPlugins=&assumptions=%7B%7D).
 
 > Obviously there's a lot more to know about transpilers, but for now, let's focus on the basics.
 
