--- a/lib/articles/manage-firebase-authentication-with-a-single-react-hook.mdx
+++ b/lib/articles/manage-firebase-authentication-with-a-single-react-hook.mdx
@@ -1,4 +1,5 @@
 ---
+author: Renato Pozzi
 createdAt: 2021-12-29T19:06:33Z
 thumbnail: photo-1636454082752-c59bd0b34579
 title: Manage Firebase authentication, with a single React Hook
