--- a/lib/articles/publishing-a-javascript-library.mdx
+++ b/lib/articles/publishing-a-javascript-library.mdx
@@ -1,4 +1,5 @@
 ---
+author: Renato Pozzi
 createdAt: 2022-01-15T00:00:00Z
 thumbnail: photo-1513194241688-889833b64074
 title: Publishing a JavaScript Library
