--- a/lib/articles/learn-front-end-web-development-from-scratch.mdx
+++ b/lib/articles/learn-front-end-web-development-from-scratch.mdx
@@ -1,8 +1,7 @@
 ---
 author: Renato Pozzi
 createdAt: "2022-07-06T00:00:00Z"
-description: Everyone, including me, started to learn Front-End Web Development from scratch, and it's normal to feel disoriented at first. That's why I decided to write this article.
-title: Learn Front-End Web Development from Scratch
+description: Everyone, including me, started to learn Front-End Web Development from scratch, and it's normal to feel disoriented at first. That's why I decided to...
 isDraft: false
 ---
 
